Most columns are now sortable! Added jQuery tablesorter plugin by Christian Bach and a simple XXXms format parser for it.

--- a/lib/rack/bug/views/panels/cache.html.erb
+++ b/lib/rack/bug/views/panels/cache.html.erb
@@ -40,7 +40,7 @@
 
 <% if stats.queries.any? %>
   <h3>Breakdown</h3>
-  <table id="cache_breakdown">
+  <table id="cache_breakdown" class="sortable">
     <thead>
       <tr>
         <th>Time&nbsp;(ms)</th>
