--- a/lib/rack/bug/views/toolbar.html.erb
+++ b/lib/rack/bug/views/toolbar.html.erb
@@ -4,6 +4,7 @@
     document.write(unescape('%3Cscript src="' + jquery_url + '" type="text/javascript"%3E%3C/script%3E'));
   }
 </script>
+<script type="text/javascript" src="/__rack_bug__/jquery.tablesorter.min.js"></script>
 <script type="text/javascript" src="/__rack_bug__/bug.js"></script>
 <style type="text/css" media="screen">
   @import url(/__rack_bug__/bug.css);
